@@ -3,6 +3,8 @@
 		"pickShipTitle":"Select ship",
 		"pickShipOkText":"Confirm",
 		"pickShipCancelText":"Cancel",
+		"randomDModSelectorText":"Number of D-Mods",
+		"randomDModSelectorTooltip":"Set the intensity of the demonstration and, thus, the number of D-Mods acquired afterwards.",
 		"confirmRandomDModHidden":"\"After receiving back the now-damaged ship, you noticed that an additional sum of credits was sent alongside the expected compensation. Was this a thank-you tip from the D-MOD center? If so, perhaps the ship you offered had something to do with that?\"",
 		"confirmDModRandom":"Confirm? The selected ship will receive a random D-Mod as if it were disabled in-combat.",
 		"confirmDModPrecise":"Confirm? The selected ship will receive the following D-Mods: ",
